figs = \
	button_remove.png		\
	session-properties.png		\
	stock_exec.png			\
	stock_help.png			\
	stock_preferences.png		\
	stock_refresh.png		\
	stock_save.png			\
	stock_timer.png			\
	stock_trash.png
app = session
lang = ja
omffiles = session-ja.omf
include $(top_srcdir)/app-docs.make
dist-hook: app-dist-hook

