figs = \
	figures/button_remove.png		\
	figures/session-properties.png		\
	figures/stock_exec.png			\
	figures/stock_help.png			\
	figures/stock_preferences.png		\
	figures/stock_refresh.png		\
	figures/stock_save.png			\
	figures/stock_timer.png			\
	figures/stock_trash.png
docname = session
lang = ja
omffile = session-ja.omf
sgml_ents =
include $(top_srcdir)/sgmldocs.make
dist-hook: app-dist-hook

